--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,10 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>{{ page.title }}</title>
+    <title>TriTarget.org Development - {{ page.title }}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <!-- <meta name="description" content="" /> -->
-<link href="css/layout.css" rel="stylesheet" type="text/css" />
+<link href="/css/layout.css" rel="stylesheet" type="text/css" />
 <script language="javascript" type="text/javascript" src="http://www.onlineleaf.com/savetheenvironment.js"> </script>
 </head>
 <body>
@@ -14,43 +14,52 @@
     <h1>TriTarget.org Development</h1>
   </div>
   <ul id="nav">
-    <li id="nav-01"><a href="index.html" title="Home"><span>home</span></a></li>
-    <li id="nav-02"><a href="about.html" title="About">about</a></li>
-    <li id="nav-03"><a href="projects.html" title="Projects">projects</a></li>
-    <!-- <li id="nav-04"><a href="#" title="Blog">blog</a></li> -->
+    <li id="nav-01"><a href="/index.html" title="Home"><span>home</span></a></li>
+    <li id="nav-02"><a href="/about.html" title="About">about</a></li>
+    <li id="nav-03"><a href="/projects.html" title="Projects">projects</a></li>
+    <li id="nav-04"><a href="/archives.html" title="Archives">archives</a></li>
     <!-- <li id="nav-05"><a href="#" title="Contact">contact</a></li> -->
   </ul>
-  <h2 id="title">#{{ page.subtitle | downcase }}</h2>
+  <h2 id="title">#{% if page.subtitle %}{{ page.subtitle | downcase }}{% else %}{{ page.title | downcase }}{% endif %}</h2>
   <div id="content">
     <div id="column-left">
-      <h3>/* news <br>
-&nbsp;* ------------------------------------------ */</h3>
-      <h4>site posted live - 1.26.05</h4>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam nisl turpis, fermentum a, posuere quis, varius ac, urna. Donec mi. Aenean eleifend ante a metus. In tincidunt lectus nec odio. Fusce nonummy vulputate massa. Pellentesque habitant morbi tristique senectus et <a href="#">this is a link</a> fames ac turpis egestas. Duis tincidunt, wisi non tempus posuere, justo est mattis risus, ut posuere lectus orci tempor lectus. Cras ullamcorper sollicitudin enim. Donec ac nulla. Nullam bibendum eros nec orci. Vivamus sed erat. Nam quis odio porta urna auctor ullamcorper. Ut eu wisi. Nullam non dolor nec odio pulvinar vulputate. Nam mollis elementum dui. Sed sollicitudin. Maecenas feugiat purus at mauris. Sed at sapien nec metus tristique semper. In aliquam. Suspendisse dolor justo, facilisis ac, posuere vitae, tincidunt sit amet, nibh. </p>
-      <p>Pellentesque faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Quisque enim. Suspendisse nonummy ultrices ipsum. Pellentesque euismod. Nullam vel metus. Nullam varius metus at lorem. Nunc justo pede, ornare sit amet, viverra non, porttitor eget, erat. Vestibulum vel odio ut erat lobortis viverra. In mattis. Nunc tristique. Aliquam lectus erat, iaculis vitae, vestibulum eget, placerat non, tortor. Nam vitae wisi. In aliquam tristique ligula. </p>
-      <p align="right">&raquo; <a href="#">back to top</a></p>
-      <h4>site begins - 1.25.05</h4>
-      <p>Aenean adipiscing ornare mauris. Mauris nibh risus, mattis et, semper ac, mollis vulputate, nulla. Maecenas mollis dui vitae erat. Integer fringilla volutpat urna. Nullam velit odio, congue eu, malesuada at, mattis ac, urna. <a href="#">Donec nec elit</a> sit amet mi aliquam blandit. Praesent nec nibh. Aliquam id ante. Nunc vitae augue congue metus tristique dignissim. Donec sit amet eros. Suspendisse at magna. Etiam suscipit. In pharetra nisl vel eros. Vestibulum tempor arcu ut elit. </p>
-      <p align="right">&raquo; <a href="#">back to top</a></p>
+        {{ content }}
     </div>
     <!-- end column-left -->
     <div id="column-right">
-      <h3>/* blog <br>
-&nbsp;* ------------- */</h3>
-      <dl>
-        <dt><a href="#">work sucked - 1.26.05</a></dt>
-        <dd>Another 9 hour day at the office, nothing could be...</dd>
-        <dt><a href="#">competition? - 1.24.05</a></dt>
-        <dd>Was bored at home and stumbled upon this competition for web design...</dd>
-      </dl>
-      <h3>/* tutorials <br>
-&nbsp;* ------------- */</h3>
-      <dl>
-        <dt><a href="#">using definition lists - 1.26.05</a></dt>
-        <dd>They aren't just for displaying definitions anymore, they can also be used for...</dd>
-        <dt><a href="#">intro to css - 1.25.05</a></dt>
-        <dd>Obtain complete control over every aspect of your webpage using css...</dd>
-      </dl>
+      {{ site.rightTopicTitlePre }} links {{ site.rightTopicTitlePost }}
+      {{ site.rightTopicTitlePre }} twitter {{ site.rightTopicTitlePost }}
+<script src="http://widgets.twimg.com/j/2/widget.js"></script>
+<script>
+new TWTR.Widget({
+  version: 2,
+  type: 'profile',
+  rpp: 5,
+  interval: 6000,
+  width: 216,
+  height: 250,
+  theme: {
+    shell: {
+      background: '#333333',
+      color: '#ffffff'
+    },
+    tweets: {
+      background: '#000000',
+      color: '#ffffff',
+      links: '#4aed05'
+    }
+  },
+  features: {
+    scrollbar: true,
+    loop: false,
+    live: false,
+    hashtags: true,
+    timestamp: true,
+    avatars: false,
+    behavior: 'all'
+  }
+}).render().setUser('sukima').start();
+</script>
     </div>
     <!-- end column-right -->
     <div id="bottom"></div>
@@ -59,8 +68,8 @@
 </div>
 <!-- end wrap -->
 <div id="footer">
-  <p><a href="#" title="Home">home</a> : <a href="#" title="Tutorials">tutorials</a> : <a href="#" title="Portfolio">portfolio</a> : <a href="#" title="Blog">blog</a> : <a href="#" title="Contact">contact</a></p>
-  <p><a href="http://www.dreamhost.com/green.cgi?dev.tritarget.org"><img border="0" alt="Green Web Hosting! This site hosted by DreamHost." src="https://secure.newdream.net/green3.gif" height="15" width="80" /></a> : Copyright &copy; 2005 <a href="mailto:jsepulveda@gmail.com">Justin Sepulveda</a></p>
+  <p><a href="/index.html" title="Home"><span>home</span></a> : <a href="/about.html" title="About">about</a> : <a href="/projects.html" title="Projects">projects</a> : <a href="/archives.html" title="Archives">archives</a></p>
+  <p><a href="http://www.dreamhost.com/green.cgi?tritarget.org"><img border="0" alt="Green Web Hosting! This site hosted by DreamHost." src="https://secure.newdream.net/green3.gif" height="15" width="80" valign="middle" /></a> : Copyright &copy; 2010 Devin Weaver : Design by <a href="mailto:jsepulveda@gmail.com">Justin Sepulveda</a></p>
 </div>
 </body>
 </html>
