--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,3 +4,4 @@ layout: default
 {{ site.topicTitlePre }} {{ page.title }} {{ site.topicTitlePost }}
 {{ site.topicSubtitlePre }} {{ page.date | date_to_string }} {{ site.topicSubtitlePost }}
 {{ content }}
+<div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/devtritargetorg/embed.js"></script><noscript><a href="http://disqus.com/forums/devtritargetorg/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
