--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,21 @@
     <title>TriTarget.org Development - {{ page.title }}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <!-- <meta name="description" content="" /> -->
-<link href="/css/layout.css" rel="stylesheet" type="text/css" />
+<meta name="viewport" content="initial-scale=1.0" />
+
+<!-- Desktop Browsers Only -->
+<link href="/css/layout.css" rel="stylesheet" type="text/css" media="screen and (min-device-width: 481px)" />
+<!--[if IE]>
+<link href="/css/layout.css" rel="stylesheet" type="text/css" media="screen" />
+<![endif]-->
+
+<!-- iPhone Browser Only -->
+<link href="/css/handheld.css" rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" />
+<link href="/css/handheld.css" rel="stylesheet" type="text/css" media="handheld" />
+
+<!-- Global Styles -->
+<link href="/css/syntax.css" rel="stylesheet" type="text/css" media="screen" />
+
 <script language="javascript" type="text/javascript" src="http://www.onlineleaf.com/savetheenvironment.js"> </script>
 <script language="javascript">
     var disqus_developer = 0;
