--- a/css/handheld.css
+++ b/css/handheld.css
@@ -2,7 +2,7 @@
 a:link,a:visited { text-decoration:none; }
 
 /* No list-markers by default - must redefine bullets w/ bg graphics */
-ul,ol { list-style:none; }
+/* ul,ol { list-style:none; } */
 
 /* Avoid browser default inconsistent heading font-sizes and pre/code */
 h1,h2,h3,h4,h5,h6,pre,code { font-size:1em; }
@@ -30,12 +30,17 @@ a:hover,a:active { text-decoration:none; }
  
  #title { background-color:#0D111A; color:#f5f5f5; height:20px; margin:2px 0; padding:2px 10px 0 0; text-align:right; }
  
+ .postSubtitle { text-align: right; }
+ 
  #content { background:url("../images/bg-index.gif") repeat-y; }
+ #content ul, #content ol { margin: 0px; padding: 0px 0px 0px 45px; }
+ #content li { margin: 5px 0px; padding: 0px; }
  #content h3 { padding:10px 10px 5px 10px; }
  #content h4 { padding:0 21px 3px 21px; }
  #content p, #content dl { padding:0 21px; }
  #content dl { padding-bottom:10px; }
  #content dd { padding-bottom:20px; }
+ #content pre { background: #F2F2F2; border: none; margin: 5px 15px; padding: 5px 5px 3px 5px; overflow: visible; }
  
   #column-left a:link, #column-left a:visited { color:#990033; margin: 3px; }
   #column-left a:hover, #column-left a:active { color:#990033; text-decoration: none; background-color: white; margin: 2px; border: 1px dotted black; }
@@ -55,7 +60,7 @@ a:hover,a:active { text-decoration:none; }
 
 /* navigation
  * ------------------------------------------------------------------------- */
-#nav { background-color:#334466; margin: 20px auto; text-align: center; }
+#nav { background-color:#334466; margin: 20px auto; text-align: center; list-style: none; }
 #nav li { display: inline; margin: 15px 10px; }
 
 #nav a { font-family:Arial, Helvetica, sans-serif; text-decoration:none; color:#f5f5f5; } 
