--- a/css/layout.css
+++ b/css/layout.css
@@ -16,7 +16,7 @@ CSS Document - layout.css
 a:link,a:visited { text-decoration:none; }
 
 /* No list-markers by default - must redefine bullets w/ bg graphics */
-ul,ol { list-style:none; }
+/* ul,ol { list-style:none; } */
 
 /* Avoid browser default inconsistent heading font-sizes and pre/code */
 h1,h2,h3,h4,h5,h6,pre,code { font-size:1em; }
@@ -47,13 +47,18 @@ h4 { font-size:14px; }
  #banner h1 { font-family:Arial, Helvetica, sans-serif; color:#f5f5f5; padding:80px 0 0 340px; }
  
  #title { background-color:#0D111A; color:#f5f5f5; height:20px; margin:2px 0; padding:2px 10px 0 0; text-align:right; }
+
+ .postSubtitle { text-align: right; }
  
  #content { background:url("../images/bg-index.gif") repeat-y; }
+ #content ul, #content ol { margin: 0px; padding: 0px 0px 0px 45px; }
+ #content li { margin: 5px 0px; padding: 0px; }
  #content h3 { padding:10px 10px 5px 10px; }
  #content h4 { padding:0 21px 3px 21px; }
  #content p, #content dl { padding:0 21px; }
  #content dl { padding-bottom:10px; }
  #content dd { padding-bottom:20px; }
+ #content pre { background: #F2F2F2; border: thin dashed blue; margin: 5px 15px; padding: 5px 5px 3px 5px; overflow: auto; }
  
   #column-left { width:500px; float:left; margin-right:2px; }
   #column-left a:link, #column-left a:visited { color:#990033; margin: 3px; }
@@ -75,7 +80,7 @@ h4 { font-size:14px; }
 
 /* navigation
  * ------------------------------------------------------------------------- */
-#nav { background-color:#334466; width:719px; height:60px; position:relative; }
+#nav { background-color:#334466; width:719px; height:60px; position:relative; list-style: none; }
 #nav li { position:absolute; }
 #nav li, #nav a { width:143px; height:60px; display:block; }
 #nav a { font-family:Arial, Helvetica, sans-serif; text-decoration:none; font-size:18px; text-align:center; color:#f5f5f5; line-height:60px; } 
@@ -87,3 +92,7 @@ h4 { font-size:14px; }
 #nav-05 { left:574px; }
 
 #nav-01 a:hover, #nav-02 a:hover, #nav-03 a:hover, #nav-04 a:hover, #nav-05 a:hover { background-color:#9AA2B3; }
+
+/* twitter widget
+ * ------------------------------------------------------------------------- */
+.twtr-tweet-text a:hover, .twtr-tweet-text a:active { text-decoration: none; background-color: #333333 !important; margin: 2px; border: 1px dotted white !important; }
