--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,3 +1,18 @@
-<ul id="links-list">
-    <li>test</li>
-</ul>
+<dl>
+    <dt>Hacking</dt>
+        <dd><a href="http://git-scm.com/">Git</a> - <span class="favorite">VCS</span></dd>
+        <dd><a href="http://vim.org/">VIM</a> - <span class="favorite">Editor</span></dd>
+        <dd><a href="http://jekyllrb.com/">jekyll</a> - <span class="favorite">CMS</span></dd>
+        <dd><a href="http://getfirefox.com">Firefox</a> - Browser</dd>
+    <dt>Languages</dt>
+        <dd><a class="gold" href="http://http://en.wikipedia.org/wiki/Objective-C">Obj-C</a></dd>
+        <dd><a class="silver" href="http://en.wikipedia.org/wiki/Java_%28programming_language%29">Java</a></dd>
+        <dd><a class="bronze" href="http://en.wikipedia.org/wiki/Ruby_%28programming_language%29">Ruby</a></dd>
+    <dt>Operating Systems</dt>
+        <dd><a class="silver" href="http://www.apple.com/macosx">Mac OS X</a></dd>
+        <dd><a class="silver" href="http://en.wikipedia.org/wiki/IPhone_OS">iPhone OS</a></dd>
+        <dd><a class="gold" href="http://www.linux.org/">Linux</a></dd>
+    <dt>Recommendations</dt>
+        <dd><a class="favorite" href="http://www.google.com/chrome">Google Chrome</a></dd>
+        <dd><a class="favorite" href="http://www.apple.com/">Apple</a></dd>
+</dl>
