--- a/_includes/links.html
+++ b/_includes/links.html
@@ -15,4 +15,6 @@
     <dt>Recommendations</dt>
         <dd><a class="favorite" href="http://www.google.com/chrome">Google Chrome</a></dd>
         <dd><a class="favorite" href="http://www.apple.com/">Apple</a></dd>
+    <dt>Sites</dt>
+        <dd><a class="gold" href="http://github.com">GitHub</a></dd>
 </dl>
