Adds project page and fix tags
Also adds a fork me on github badge. Fizes the tags display. drops
disqus comments developer flag.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,11 @@
 
 <script language="javascript" type="text/javascript" src="http://www.onlineleaf.com/savetheenvironment.js"> </script>
 <script language="javascript">
-    var disqus_developer = 1;
+    var disqus_developer = 0;
 </script>
 </head>
 <body>
+<a href="http://github.com/sukima"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 <div id="wrap">
   <div id="banner">
     <h1>TriTarget.org Development</h1>
