--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,4 +7,6 @@ layout: default
 {% if page.tags and page.tags.size > 0 %}
 <p class="taglist">Tags: {{ page.tags | array_to_sentence_string }}</p>
 {% endif %}
+{% if site.disqusComments %}
 <div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/devtritargetorg/embed.js"></script><noscript><a href="http://disqus.com/forums/devtritargetorg/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+{% endif %}
