Several css fixes for iPhone and ease of reading
Also adds beter text display and line hight for easier reading.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,12 @@
 
 </head>
 <body>
-<a href="http://github.com/sukima"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+    <div id="forkme">
+        <a href="http://github.com/sukima"><img src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+    </div>
+    <div id="forkme-text">
+        * <a href="http://github.com/sukima">Fork me on GitHub</a> *
+    </div>
 <div id="wrap">
   <div id="banner">
     <h1>TriTarget.org Development</h1>
