--- a/css/handheld.css
+++ b/css/handheld.css
@@ -17,10 +17,13 @@ a img,a:link img,a:visited img { border:none; }
  * ------------------------------------------------------------------------- */
 body { background-color:#f5f5f5; text-align:left; }
 p,a:link,a:visited,ul,ol,li,dl,dt,dd,h1,h2,h3,h4 { color:#1A2233; text-decoration:none; }
-p,dl,dt,dd,ul,ol,li { line-height: 13px; }
+p,dl,dt,dd,ul,ol,li { line-height: 140%; }
 p,pre,blockquote { margin-bottom:7px; }
 a:link,a:visited { font-weight:bold; }
 a:hover,a:active { text-decoration:none; }
+#forkme { display: none; }
+#forkme-text { display: block; text-align: right; margin: 5px auto; }
+#forkme-text a { color:#990033; }
 
 
 /* skeleton
