--- a/css/layout.css
+++ b/css/layout.css
@@ -30,15 +30,17 @@ a img,a:link img,a:visited img { border:none; }
 /* basic elements
  * ------------------------------------------------------------------------- */
 body { background-color:#f5f5f5; text-align:left; }
-p,a:link,a:visited,ul,ol,li,dl,dt,dd,h1,h2,h3,h4 { font-family:"Courier New", Courier, mono; color:#1A2233; font-size:11px; text-decoration:none; }
-p,dl,dt,dd,ul,ol,li { line-height: 13px; }
+h1,h2,h3,h4 { font-family:"Courier New", Courier, mono; color:#1A2233; font-size:11px; text-decoration:none; }
+p,a:link,a:visited,ul,ol,li,dl,dt,dd { color:#1A2233; font-size:100%; text-decoration:none; }
+p,dl,dt,dd,ul,ol,li { line-height: 140%; }
 p,pre,blockquote { margin-bottom:7px; }
 a:link,a:visited { font-weight:bold; }
 a:hover,a:active { text-decoration:none; }
 h1 { font-size:18px; }
 h2,h3 { font-size:16px; }
 h4 { font-size:14px; }
-
+#forkme { position: absolute; top: 0; right: 0; border: 0; }
+#forkme-text { display: none; }
 
 /* skeleton
  * ------------------------------------------------------------------------- */
@@ -100,6 +102,7 @@ h4 { font-size:14px; }
 
 /* links section
  * ------------------------------------------------------------------------- */
+#links { font-family:"Courier New", Courier, mono; color:#1A2233; font-size:11px; text-decoration:none; line-height: 14px; }
 #links ul { list-style: none; margin: 0 0 20px 21px; padding: 0; }
 #links li { font-size: 1.1em; margin: 0; }
 #links a { font-size: 1.0em; }
