Adds meebo support

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,6 +119,10 @@ google.setOnLoadCallback(OnLoad);
           {{ site.rightTopicTitlePre }} twitter {{ site.rightTopicTitlePost }}
           <div class="column-right-content">{% include twitter.html %}</div>
       </div>
+      <div id="meebo">
+          {{ site.rightTopicTitlePre }} meebo {{ site.rightTopicTitlePost }}
+          <div class="column-right-content">{% include meebo.html %}</div>
+      </div>
     </div>
     <!-- end column-right -->
     <div id="bottom"></div>
