Adds collapsable sidebar boxes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,6 +74,16 @@ google.setOnLoadCallback(OnLoad);
 //]]>
 </script>
 
+<!-- Custom Scripts -->
+<script language="javascript" type="text/javascript" src="/js/site.js"> </script>
+<script language="Javascript" type="text/javascript">
+    $(document).ready(function() {
+        site.initCollapsibleDivs();
+        //site.collapseAll();
+        //$('#links .column-right-title').click();
+    });
+</script>
+
 </head>
 <body>
     <div id="forkme">
