--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,10 @@
 <link href="/css/syntax.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="/css/site.css" rel="stylesheet" type="text/css" media="screen" />
 
+<!-- Load jQuery -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
+<!-- <script src="http://github.com/sukima/skiQuery/raw/master/skiQuery.js" type="text/javascript"></script> -->
+
 {% if site.enableScreenSaver %}
 <script language="javascript" type="text/javascript" src="http://www.onlineleaf.com/savetheenvironment.js"> </script>
 {% endif %}
@@ -36,9 +40,6 @@
 <script src="http://www.google.com/jsapi?key=ABQIAAAAqE6xAHX7wy0-s7qeRu49YxTgYSfghEm3OBKNO_2I0le4aTTIchRtUkDNZB6DhL23OdwaRr-MgcZ11A" type="text/javascript"></script>
 <script language="Javascript" type="text/javascript">
 //<![CDATA[
-// Load JQuery
-google.load("jquery", "1");
-
 // Load Google Searching
 google.load("search", "1");
 
@@ -82,8 +83,7 @@ google.setOnLoadCallback(OnLoad);
 <script language="Javascript" type="text/javascript">
     $(document).ready(function() {
         site.initCollapsibleDivs();
-        //site.collapseAll();
-        //$('#links .column-right-title').click();
+        site.collapseDivs();
     });
 </script>
 
