Fixes twitter for aqua theme

--- a/_includes/twitter.html
+++ b/_includes/twitter.html
@@ -3,19 +3,19 @@
 new TWTR.Widget({
   version: 2,
   type: 'profile',
-  rpp: 5,
+  rpp: 3,
   interval: 6000,
-  width: 216,
-  height: 250,
+  width: 174,
+  height: 230,
   theme: {
     shell: {
-      background: '#333333',
-      color: '#ffffff'
+      background: '#ffffff',
+      color: '#000000'
     },
     tweets: {
-      background: '#000000',
-      color: '#ffffff',
-      links: '#4aed05'
+      background: '#eae6fa',
+      color: '#000000',
+      links: '#076eeb'
     }
   },
   features: {
