--- a/css/aqua.css
+++ b/css/aqua.css
@@ -149,7 +149,7 @@ body {
 .box_bottom {
     width: 100%;
     height: 23px;
-    margin: 0;
+    margin: 0 0 10px 0;
     background-image: url(../images/aqua/table_bottom.jpg);
     background-repeat: no-repeat;
 }
