--- a/css/site.css
+++ b/css/site.css
@@ -38,3 +38,23 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
     color: #7DA5E0;
 }
+
+/* Easter Egg ski game */
+/* Z-index of #mask must lower than #boxes .window */  
+#mask {  
+  position:absolute;  
+  z-index:9000;  
+  background-color:#000;  
+  display:none;  
+}  
+    
+#dialog-boxes .window {  
+  position:absolute;  
+  width:660px;  
+  height:400px;  
+  overflow: scroll;
+  display:none;  
+  z-index:9999;  
+  padding:20px;  
+  text-align: left;
+}  
