--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,9 @@
 <link href="/css/site.css" rel="stylesheet" type="text/css" media="screen" />
 
 <!-- Load jQuery -->
+<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/themes/ui-{{ site.theme }}/jquery-ui.css" type="text/css" media="all" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js" type="text/javascript"></script>
 
 {% if site.enableScreenSaver %}
 <script language="javascript" type="text/javascript" src="http://www.onlineleaf.com/savetheenvironment.js"> </script>
@@ -42,7 +44,7 @@
 // Load Google Searching
 google.load("search", "1");
 
-function OnLoad() {
+function GoogleOnLoad() {
     // Create a search control
     var searchControl = new google.search.SearchControl();
     var drawOptions = new google.search.DrawOptions();
@@ -72,7 +74,7 @@ function OnLoad() {
     //searchControl.execute("Google");
 }
 
-google.setOnLoadCallback(OnLoad);
+//google.setOnLoadCallback(OnLoad);
 //]]>
 </script>
 {% endif %}
@@ -81,6 +83,7 @@ google.setOnLoadCallback(OnLoad);
 <script language="javascript" type="text/javascript" src="/js/site.js"> </script>
 <script language="Javascript" type="text/javascript">
     $(document).ready(function() {
+        GoogleOnLoad();
         site.initCollapsibleDivs();
         site.collapseDivs();
         site.initDialogBoxes();
