--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 <link href="/css/site.css" rel="stylesheet" type="text/css" media="screen" />
 
 <!-- Load jQuery -->
-<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/themes/ui-{{ site.theme }}/jquery-ui.css" type="text/css" media="all" />
+<link rel="stylesheet" href="/css/{{ site.theme }}/jquery-ui.css" type="text/css" media="all" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js" type="text/javascript"></script>
 
