Adds a badges page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,6 +111,7 @@ function GoogleOnLoad() {
       <ul>
         <li><a href="/index.html" title="Home"><span>home</span></a></li>
         <li><a href="/about.html" title="About">about</a></li>
+        <li><a href="/badges.html" title="Badges">badges</a></li>
         <li><a href="/projects.html" title="Projects">projects</a></li>
         <li><a href="/archives.html" title="Archives">archives</a></li>
         <li><a href="#searchcontrol" title="Search">search</a></li>
