--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,12 @@
 <!-- <meta name="description" content="" /> -->
 <meta name="viewport" content="initial-scale=1.0" />
 
+<!-- Load jQuery -->
+<!-- <link rel="stylesheet" href="/css/{{ site.theme }}/jquery-ui.css" type="text/css" media="all" /> -->
+<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/{{ site.theme }}/jquery-ui.css" type="text/css" media="all"/>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js" type="text/javascript"></script>
+
 <!-- Desktop Browsers Only -->
 <link href="/css/aqua.css" rel="stylesheet" type="text/css" media="screen and (min-device-width: 481px)" />
 <!--[if IE]>
@@ -20,11 +26,6 @@
 <!-- Global Styles -->
 <link href="/css/syntax.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="/css/site.css" rel="stylesheet" type="text/css" media="screen" />
-
-<!-- Load jQuery -->
-<link rel="stylesheet" href="/css/{{ site.theme }}/jquery-ui.css" type="text/css" media="all" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js" type="text/javascript"></script>
 
 {% if site.enableScreenSaver %}
 <script language="javascript" type="text/javascript" src="http://www.onlineleaf.com/savetheenvironment.js"> </script>
@@ -84,8 +85,18 @@ function GoogleOnLoad() {
 <script language="Javascript" type="text/javascript">
     $(document).ready(function() {
         GoogleOnLoad();
-        site.initCollapsibleDivs();
-        site.collapseDivs();
+        // site.initCollapsibleDivs();
+        // site.collapseDivs();
+        $("#panel").accordion({
+            header: ".box_top",
+            icons: false,
+            changestart: function (event, ui) {
+                ui.newHeader.removeClass('collapsed');
+            },
+            change: function (event, ui) {
+                ui.oldHeader.addClass('collapsed');
+            }
+        });
         site.initDialogBoxes();
 
         {% if site.enableSki %}
@@ -126,8 +137,8 @@ function GoogleOnLoad() {
 
     <div id="panel">
       {% if site.enableTwitter %}
+      <div class="box_top">twitter</div>
       <div class="panel_box">
-        <div class="box_top">twitter</div>
         <div id="twitter" class="box_text">
           {% include twitter.html %}
         </div>
@@ -135,8 +146,8 @@ function GoogleOnLoad() {
       </div>
       {% endif %}
 
+      <div class="box_top collapsed">links</div>
       <div class="panel_box">
-        <div class="box_top collapsed">links</div>
         <div class="box_text links">
           {% include links.html %}
         </div>
