--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>TriTarget.org Development{% if page.title %} - {{ page.title }}{% endif %}</title>
+    <title>{{ site.title }}{% if page.title %} - {{ page.title }}{% endif %}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <!-- <meta name="description" content="" /> -->
 <meta name="viewport" content="initial-scale=1.0" />
@@ -31,9 +31,12 @@
 <script language="javascript" type="text/javascript" src="http://www.onlineleaf.com/savetheenvironment.js"> </script>
 {% endif %}
 
+{% include debug.html %}
 {% if site.enableDisqusComments %}
 <script language="javascript">
-    var disqus_developer = {% if site.debug %}1{% else %}0{% endif %};
+    <!--
+    var disqus_developer = site_debug;
+    // -->
 </script>
 {% endif %}
 
