Adds atom feeds

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
 <!-- <meta name="description" content="" /> -->
 <meta name="viewport" content="initial-scale=1.0" />
 
+<link rel="alternate" type="application/atom+xml" href="/atom.xml" />
+
 <!-- Load jQuery -->
 <!-- <link rel="stylesheet" href="/css/{{ site.theme }}/jquery-ui.css" type="text/css" media="all" /> -->
 <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/{{ site.theme }}/jquery-ui.css" type="text/css" media="all"/>
