Adds comments fr better source code reading

--- a/_includes/debug.html
+++ b/_includes/debug.html
@@ -1,3 +1,4 @@
+<!-- Development or Production check -->
 <script type="text/javascript">
     <!--
     var site_debug = ("{{ site.debug }}" == "true" ? true : false);
