--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -168,7 +168,7 @@ function GoogleOnLoad() {
 </div>
 <!-- end wrap -->
 <div id="footer">
-  <p><a href="http://www.dreamhost.com/green.cgi?tritarget.org"><img border="0" alt="Green Web Hosting! This site hosted by DreamHost." src="https://secure.newdream.net/green3.gif" height="15" width="80" valign="middle" /></a> : Copyright &copy; 2010 Devin Weaver : Design by <a class="email" href="mailto:jsepulveda@gmail.com">Justin Sepulveda</a></p>
+    <p><a href="http://www.dreamhost.com/green.cgi?tritarget.org"><img border="0" alt="Green Web Hosting! This site hosted by DreamHost." src="https://secure.newdream.net/green3.gif" height="15" width="80" valign="middle" /></a> : Copyright &copy; 2010 Devin Weaver : <a href="/humans.txt"><img src="/images/humanstxt.gif" alt="humans.txt" width="88" height="31" /></a></p>
 </div>
 
 {% if site.disqus.enabled %}
