--- a/_includes/links.html
+++ b/_includes/links.html
@@ -17,4 +17,5 @@
         <dd><a class="favorite" href="http://www.apple.com/">Apple</a></dd>
     <dt>Sites</dt>
         <dd><a class="gold" href="http://github.com">GitHub</a></dd>
+        <dd><a rel="author" href="https://plus.google.com/104981501099138892251">Google+ <img src="http://www.google.com/images/icons/ui/gprofile_button-16.png" width="16" height="16"></a></dd>
 </dl>
