Moves license to CC-BY 3.0
Fixes bad layout of text. Adds a better humans.txt image.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -168,7 +168,14 @@ function GoogleOnLoad() {
 </div>
 <!-- end wrap -->
 <div id="footer">
-    <p><a href="http://www.dreamhost.com/green.cgi?tritarget.org"><img border="0" alt="Green Web Hosting! This site hosted by DreamHost." src="https://secure.newdream.net/green3.gif" height="15" width="80" valign="middle" /></a> : Copyright &copy; 2010 Devin Weaver : <a href="/humans.txt"><img src="/images/humanstxt.gif" alt="humans.txt" width="88" height="31" /></a></p>
+    <p class="badges">
+        <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a>
+        : <a href="/humans.txt"><img src="/images/humanstxt.png" alt="humans.txt" width="88" height="31" /></a>
+        : <a href="http://www.dreamhost.com/green.cgi?tritarget.org"><img border="0" alt="Green Web Hosting! This site hosted by DreamHost." src="https://secure.newdream.net/green3.gif" height="15" width="80" valign="middle" /></a>
+    </p>
+    <p class="under-footer-text">
+        This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+    </p>
 </div>
 
 {% if site.disqus.enabled %}
