--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,6 +1,7 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">Home</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+  <li><a href="{{ root_url }}/about">About Me</a></li>
   <li><a href="{{ root_url }}/badges">Badges</a></li>
   <li><a href="{{ root_url }}/projects">Codeing</a></li>
   <li><a href="http://photos.tritarget.org/">Photography</a></li>
