--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -2,19 +2,22 @@
 <link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
 <!-- Load jQuery -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script> -->
 
 <!-- Load jQuery UI -->
-<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/{{ site.jqueryui_theme }}/jquery-ui.css" type="text/css" media="all"/>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js" type="text/javascript"></script>
+<!-- <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/{{ site.jqueryui_theme }}/jquery-ui.css" type="text/css" media="all"/> -->
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js" type="text/javascript"></script> -->
 
 <!-- Custom Scripts -->
 <script language="javascript" type="text/javascript" src="/javascripts/site.js"> </script>
 <script language="Javascript" type="text/javascript">
+    /*
     jQuery.noConflict();
-    jQuery.ready(function() {
+    $(document).ready(function() {
         site.initDialogBoxes();
 
+        // TODO: Fix keypress code (See site.js)
         site.initKonamiCode();
     });
+    */
 </script>
