--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -2,7 +2,7 @@
 <link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
 <!-- Load jQuery -->
-<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script> -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 
 <!-- Load jQuery UI -->
 <!-- <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/{{ site.jqueryui_theme }}/jquery-ui.css" type="text/css" media="all"/> -->
@@ -14,10 +14,10 @@
     /*
     jQuery.noConflict();
     $(document).ready(function() {
-        site.initDialogBoxes();
+        //site.initDialogBoxes();
 
         // TODO: Fix keypress code (See site.js)
-        site.initKonamiCode();
+        //site.initKonamiCode();
     });
     */
 </script>
