--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -3,21 +3,41 @@
 
 <!-- Load jQuery -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+    jQuery.noConflict(); // ender.js conflicts with jQuery
+</script>
 
 <!-- Load jQuery UI -->
 <!-- <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/{{ site.jqueryui_theme }}/jquery-ui.css" type="text/css" media="all"/> -->
 <!-- <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js" type="text/javascript"></script> -->
 
+<!-- Load FancyBox -->
+<link rel="stylesheet" href="{{ root_url }}/fancybox/jquery.fancybox.css" />
+<script src="{{ root_url }}/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+<!-- Load FancyBox Helpers -->
+<link rel="stylesheet" href="{{ root_url }}/fancybox/helpers/jquery.fancybox-thumbs.css" />
+<script src="{{ root_url }}/fancybox/helpers/jquery.fancybox-thumbs.js" type="text/javascript"></script>
+
+{% fancyboxstylefix %}
+
 <!-- Custom Scripts -->
 <script language="javascript" type="text/javascript" src="/javascripts/site.js"> </script>
 <script language="Javascript" type="text/javascript">
-    /*
-    jQuery.noConflict();
+    // ender.js gobbles jQuery's ready events: Use ender.js $ instead
     $(document).ready(function() {
         //site.initDialogBoxes();
 
         // TODO: Fix keypress code (See site.js)
         //site.initKonamiCode();
+
+        // Load fancybox
+        jQuery(".fancybox").fancybox({
+            helpers: {
+                thumbs: {
+                    width: 50,
+                    height: 50
+                }
+            }
+        });
     });
-    */
 </script>
