--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -22,6 +22,7 @@
 
 <!-- Custom Scripts -->
 <script language="javascript" type="text/javascript" src="/javascripts/site.js"> </script>
+<script src="/javascripts/pano.js" type="text/javascript"></script>
 <script language="Javascript" type="text/javascript">
     // ender.js gobbles jQuery's ready events: Use ender.js $ instead
     $(document).ready(function() {
@@ -39,5 +40,7 @@
                 }
             }
         });
+
+        jQuery(".fancybox-pano").click(pano.open);
     });
 </script>
