--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -4,6 +4,6 @@
   <li><a href="{{ root_url }}/about">About Me</a></li>
   <li><a href="{{ root_url }}/badges">Badges</a></li>
   <li><a href="{{ root_url }}/projects">Codeing</a></li>
-  <li><a href="http://photos.tritarget.org/">Photography</a></li>
+  <li><a href="{{ root_url }}/photography">Photography</a></li>
   <li><a href="{{ root_url }}/stories">Creative Writing</a></li>
 </ul>
