--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -15,3 +15,9 @@
 {% fancyboxstylefix %}
 
 <!-- Custom Scripts -->
+<script type="text/javascript">
+  (function($, require) {
+    Site = require("Site");
+    $(Site.init);
+  })(jQuery, window.require);
+</script>
